# azure-sphere-libcurl-awsiotcore

./: CMakeLists.txt  README.md  app_manifest.json  main.c
certs/: f1314901d2-certificate.pem  f1314901d2-private.pem
script/: preconfigure.py
script/lambda/: AzureSphereJITR.py
script/lambda/asn1crypto-1.2.0.dist-info/: RECORD
